[gd_scene load_steps=14 format=3 uid="uid://drw5lx83cps2u"]

[ext_resource type="Script" uid="uid://bgpft1a6p580d" path="res://scenes/ui/game_menu.gd" id="1_5s0hc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwnig"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yonvy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5jstl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfcbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e2p27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ngj32"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bm8t2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5d4ag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_um6dh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mf7fl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6l81"]

[sub_resource type="Theme" id="Theme_a1wsg"]
default_font_size = 24
Button/colors/font_focus_color = Color(0.2509804, 0.38431373, 0.5921569, 1)
Button/colors/font_hover_color = Color(0.72156864, 0.83137256, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.20784314, 0.26666668, 0.38039216, 1)
Button/styles/disabled = SubResource("StyleBoxEmpty_qwnig")
Button/styles/disabled_mirrored = SubResource("StyleBoxEmpty_yonvy")
Button/styles/focus = SubResource("StyleBoxEmpty_5jstl")
Button/styles/hover = SubResource("StyleBoxEmpty_tfcbk")
Button/styles/hover_mirrored = SubResource("StyleBoxEmpty_e2p27")
Button/styles/hover_pressed = SubResource("StyleBoxEmpty_ngj32")
Button/styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bm8t2")
Button/styles/normal = SubResource("StyleBoxEmpty_5d4ag")
Button/styles/normal_mirrored = SubResource("StyleBoxEmpty_um6dh")
Button/styles/pressed = SubResource("StyleBoxEmpty_mf7fl")
Button/styles/pressed_mirrored = SubResource("StyleBoxEmpty_d6l81")

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_a1wsg")
script = ExtResource("1_5s0hc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07058824, 0.07058824, 0.07058824, 0.78039217)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ReturnToGameButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../GridContainer/MasterSlider")
focus_next = NodePath("../GridContainer/MasterSlider")
focus_previous = NodePath("../QuitButton")
text = "Continuar juego"
alignment = 0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MasterLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../ReturnToGameButton")
focus_neighbor_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
focus_previous = NodePath("../../ReturnToGameButton")
step = 0.5

[node name="MusicLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
text = "Música"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MasterSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../MasterSlider")
step = 0.5

[node name="SFXLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../../MainMenu")
focus_next = NodePath("../../MainMenu")
focus_previous = NodePath("../MusicSlider")
step = 0.5

[node name="MainMenu" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../GridContainer/SFXSlider")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../GridContainer/SFXSlider")
text = "Volver a menú principal"
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../ReturnToGameButton")
focus_next = NodePath("../ReturnToGameButton")
focus_previous = NodePath("../MainMenu")
text = "Salir del juego"
alignment = 0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
